# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.368 2007-03-12 09:24:50 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
CVS HEAD (????/??/??)
 - (2007/03/11) Added enhancement bug# 1102 - restore.pl should check for
    existing tables and stop if already one exists.
 - (2007/03/11) Added enhancement bug# 1664 - increase max. WebMaxFileUpload
    size.
 - (2007/03/08) Improved Prepare() of Kernel::System::DB to fetch also rows
   between 10 and 30 (with start option of result). For example:

   $DBObject->Prepare(
       SQL => "SELECT id, name FROM table",
       Start => 10,
       Limit => 20,
   );

 - (2007/03/08) Improved XML database database backend for <Insert>. Content
    in xml attribut is not longer allowed, use the content instead. Now it's
    also possible to use new lines (\n) or more lines as content.

    Old style:
    <Insert Table="table_name">
        <Data Key="name_a" Value="Some Message A." Type="Quote"/>
        <Data Key="name_b" Value="Some Message B." Type="Quote"/>
    </Insert>

    New style:
    <Insert Table="table_name">
        <Data Key="name_a" Type="Quote">Some Message A.</Data>
        <Data Key="name_b" Type="Quote">Some Message B.</Data>
    </Insert>

 - (2007/03/08) Moved from scripts/database/initial_insert.sql to database depend
    initial insert files located under scripts/database/otrs-initial_insert.*.sql.
    This files are generated from scripts/database/otrs-initial_insert.xml.

    Note: The scripts/database/initial_insert.sql exists not longer, use
    scripts/database/otrs-initial_insert.*.sql from now on for installations.

 - (2007/03/08) Fixed bug# 1017 - script initial_insert.sql, ampersand and oracle.